# opencv

./: SetCoorDirateWidget.py  SetCoordirateUi.ui  SetUi.py  SetUi.ui  c++ opencv搭建补充.txt  feature_match.py  main.py  meanshift_detect_test.py  models.py  objectdetect1.py  objectdetect2.py  offical-opencv-python  opencv安装方式.txt  pointlocation.py  readme.txt  record.txt  requirements.txt  shapedetect.py  svmclassify.py  template_match.py  videowindow.ui
NtyVideo/: coordinate_data.txt  distance_test.py  plccom.txt  plchandle.py  requirements.txt  template_match.py  行车视频识别文档.txt
NtyVideo/app/: config.py
NtyVideo/app/core/autowork/: detector.py  process.py  processthread.py
NtyVideo/app/core/beans/: models.py
NtyVideo/app/core/processers/: __init__.py  (+1 more)
NtyVideo/app/icons/: resource.py  resource.qrc
NtyVideo/app/log/: logtool.py
NtyVideo/app/views/: commonset_window.py  landmark_window.py  main_window.py  roiwindow.py
Test/: FAST_CNN.py  YOLO_CHANGE_PICSIZE.py  biaoding_test.py  config.py  demo.py  demo1.py  distance_test.py  find_bag_test.py  find_num.py  go  go.py  landmark_test.py  main.py  main.spec  make_train.py  mark_roi.py  meanshift_detect_landmark.py  myt.py  mytest.py  mytest_afterimove.py  mytest_beforimove.py  mytest_final.py  plchandle.py  pojie.py  readme  requirements.txt  resource.py  run.py  template_match.py  tempmain.py  use_C.py  xiecheng.py  思路.txt
Test/any_test_would_delete/: feature_match.py  template_match.py
Test/app/: __init__.py  config.py  status.py
Test/app/core/: mark.py
Test/app/icons/: main.spec  resource.py  resource.qrc
Test/app/log/: logtool.py
Test/app/views/: SetLandMarkWidget.py  commonset_window.py  landmark_window.py  main_window.py  roiwindow.py  view.py
Test/core/: hist.py  mark.py  pointlocation.py
Test/core/preprocess/: landmarkpreprocess.py  preprocess.py
Test/core/target_detect/: models.py  pointlocation.py
Test/train_data/: generalresponses.data  generalsamples.data
core/: digitdetect.py  pointlocation.py  svmclassify.py
cpp_opencv/MyStart/: imgprocess.cpp  mainwindow.cpp  ui_mainwindow.h
feature_test/: feature_match.py  landmark_detector_copy.py  mytest_afterimove.py  通过颜色特征直方图与滑动窗口比较图片相似性.py
firsttest/: application.py  compare_concurrentfuture_multipleprocess.py  face.py  first.py  main.py  彻底搞懂描述符与getAttribute关系.py
high_light/: goodidea.txt  goodidea_for_remove_noise.txt
python_cpp_opencv互调用/: cpp.txt  python.txt
python_cpp_opencv互调用/NtyVideoFullAutomatic10_12/: -.spec  bag_test.py  bitbug_favicon.spec  color_test.py  grow_test.py  hight_test.py  hock_test.py  kalman_test.py  main.py  main.spec  readme  requirements.txt  test.py  新建文本文档.txt
python_cpp_opencv互调用/NtyVideoFullAutomatic10_12/app/: config.py  status.py
qt/: opencv免编译.txt  代码.txt  引用包.txt
qt/CommonUse/: CMakeLists.txt  main.cpp
qt/CommonUse/TEST_CPP/: ocr.cpp
qt/CommonUse/TEST_INCLUDE/: ocr.h
qt/MyStart/: CMakeLists.txt  afterprocessslot.h  imgprocess.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
qt/OPENCV_SUPPLY/: CMakeLists.txt  OPENCV_SUPPLY_global.h  opencv_supply.cpp  opencv_supply.h
qt/OPENCV_SUPPLY_32BIT/: CMakeLists.txt  OPENCV_SUPPLY_32BIT_global.h  opencv_supply_32bit.cpp  opencv_supply_32bit.h
vs/: NtyVideo.cpp  configue.txt
备份_纯python版本/Test/: coordinate_data.txt  find_bag_test.py  main.py  python2plc.py  requirements.txt
备份_纯python版本/Test/app/: config.py
宝贵的测试经验/: bag_test2.py  change_img_test.py  grow_test2.py  orc_test.py  practice.py  readlog.py  svm物体分类.py  test.py  test_imgs.py  绿色射灯照在红色的袋子上导致袋子检测不到的问题.txt
数字识别/: digitdetect.py
知识储备/: 特征点检测.doc
行业知识/: c++指针与numpy数组的相互转换.txt  landmark_detector.py  一个模板图片对应多个轮廓的处理办法.txt  深入图像处理直方图与反向投影图.txt  透视变换.py  透视变换.txt  高度摄像头实时定位解决思路.txt
难点积累/: get_move_target.py  mask的作用.txt  meanshift_detect_landmark.py  pingfen_sklearn.py  template_match.py  使用反向投影与滑动窗口定位目标.py  地标检测中区域检测算法.txt  支持向量机结合hog特征检测.txt  识别算法用dll封装.py  运行轨迹增加稳定性kaerman滤波器.txt  通过反向投影图定位目标.txt  颜色检测不仅仅使用阈值.py
(+73 files in other folders)
